manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: app
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
