manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
    - http:
        paths:
          - path: /otusapp/([^/]+)/health/?$
            pathType: ImplementationSpecific
            backend:
              service:
                name: my-app-service
                port:
                  number: 80
